# libbgs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
benches/: bench_bloom_filter.rs  bench_inverses.rs  bench_orbit_tester.rs  bench_quad_num.rs  bench_sylow_factory.rs  bench_sylow_stream.rs  quad_benchmark.rs
examples/: .exhaustive-search.rs.rustfmt  exhaustive-search.rs  print_orbits.rs  run_orbit_tester.rs  run_sylow_stream.rs
libbgs-macros/: Cargo.toml
libbgs-macros/src/: lib.rs
libbgs-util/: Cargo.toml
samples/: print_orbits.rs
src/: coord.rs  factorization.rs  fp.rs  group.rs  lib.rs  main.rs  markoff.rs  numbers.rs  orbit_tester.rs  proc.rs  quad_field.rs  semigroup.rs  stock_impls.rs  streams.rs  sylow.rs  sylow_factory.rs  triple.rs  util.rs
src/markoff/: bloom_filter.rs  coord.rs  disjoint.rs  mod.rs  orbit_forest.rs  orbit_tester.rs  triple.rs
src/numbers/: factor_stream.rs  factor_trie.rs  factorization.rs  fp.rs  group.rs  hasse.rs  mod.rs  montgomery.rs  norm1.rs  quad_field.rs  quad_field_small.rs  quad_num.rs  semigroup.rs  sylow.rs  sylow_factory.rs  sylow_stream.rs
src/streams/: coord_stream.rs  divisor_stream.rs  factor_stream.rs  sylow_stream.rs
