[package]
name = "libbgs"
version = "0.4.1"
edition = "2021"
authors = ["Colby Brown <colbyabrown@math.ucdavis.edu>"]
repository = "https://github.com/colbyaustinbrown/libbgs"
license = "MPL-2.0"
categories = ["mathematics"]
publish = false

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench_quad_num"
harness = false

[[bench]]
name = "bench_sylow_stream"
harness = false

[[bench]]
name = "bench_orbit_tester"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
either = "1.9.0"
itertools = "0.11.0"
rayon = "1.7.0"
