[package]
name = "libbgs"
version = "0.16.0"
edition = "2021"
authors = ["Colby Brown <colbyabrown@math.ucdavis.edu>"]
repository = "https://github.com/colbyaustinbrown/libbgs"
license = "MPL-2.0"
categories = ["mathematics"]
publish = false
autoexamples = false

[[bench]]
name = "bench_quad_num"
harness = false

[[bench]]
name = "bench_sylow_stream"
harness = false

[[bench]]
name = "bench_orbit_tester"
harness = false

[[bench]]
name = "bench_inverses"
harness = false

[[bench]]
name = "bench_bloom_filter"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
either = "1.9.0"
itertools = "0.11.0"
rayon = "1.7.0"
# libbgs-macros = { path = "libbgs-macros" }
libbgs-util = { path = "libbgs-util" }
libbgs-macros = { path = "libbgs-macros" }
