[package]
name = "libbgs-macros"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["proc-macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prime_factorization = "1.0.4"
primes = "0.3.0"
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full", "parsing", "extra-traits", "printing"] }
